# devcontainers-cli-rs

./: .gitignore  AGENTS.md  Cargo.toml  README.md  TODO.md  next-task-prompt.txt  tarpaulin.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  integration-tests.yml  smoke.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/schemas/: devcontainer.schema.json
crates/core/src/: errors.rs  lib.rs  telemetry.rs
crates/core/src/config/: mod.rs
crates/core/src/lifecycle/: mod.rs
crates/core/src/provider/: mod.rs
crates/providers/docker/: Cargo.toml
crates/providers/docker/src/: lib.rs
spec/: 00-overview.md  01-command-surface.md  02-architecture.md  README.md
tests/: README.md
tests/basic-image/.devcontainer/: devcontainer.json
tests/docker-compose/.devcontainer/: devcontainer.json  docker-compose.yml
tests/dockerfile-build/.devcontainer/: Dockerfile  devcontainer.json
tests/environment-variables/.devcontainer/: devcontainer.json
tests/features/.devcontainer/: devcontainer.json
tests/lifecycle-commands/.devcontainer/: devcontainer.json
tests/minimal-config/.devcontainer/: devcontainer.json
tests/mounts/.devcontainer/: devcontainer.json
tests/multi-stage-dockerfile/.devcontainer/: Dockerfile  devcontainer.json
tests/override-command/.devcontainer/: devcontainer.json
tests/port-forwarding/.devcontainer/: devcontainer.json
tests/privileged-mode/.devcontainer/: devcontainer.json
tests/run-args/.devcontainer/: devcontainer.json
tests/user-configuration/.devcontainer/: devcontainer.json
tests/workspace-folder/.devcontainer/: devcontainer.json
