[workspace]
members = [
    "crates/cli",
    "crates/core",
    "crates/providers/docker",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "Apache-2.0"
rust-version = "1.76"

[workspace.dependencies]
async-trait = "0.1"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonschema = "0.17"
once_cell = "1.19"
thiserror = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
