[package]
name = "devcontainer-cli"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "devcontainer"
path = "src/main.rs"

[dependencies]
async-trait.workspace = true
anyhow.workspace = true
clap.workspace = true
devcontainer-core = { path = "../core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
devcontainer-provider-docker = { path = "../providers/docker" }
