[package]
name = "devcontainer-core"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
async-trait.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
jsonschema.workspace = true
once_cell.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
json5.workspace = true

[dev-dependencies]
tempfile = "=3.23.0"
